
       fs.gs.outputstream.buffer.size (default: 8388608)
       fs.gs.outputstream.pipe.buffer.size (default: 1048576)

  6. Deprecate and replace properties with new one:

      fs.gs.io.buffersize -> fs.gs.inputstream.buffer.size (deafult :0)
      fs.gs.io.buffersize.write -> fs.gs.outputstream.upload.chunk.size (default: 67108864)


1.9.5 - 2018-08-09

  1. Improve build configuration (`pom.xml`s) compatibility with Maven release
     plugin.

     Changes version string from `1.9.5-hadoop2` to `hadoop2-1.9.5`.

  2. Update Maven plugins versions.

  3. Do not send batch request when performing operations (rename, delete, copy)
     on 1 object.

  4. Add `fs.gs.performance.cache.dir.metadata.prefetch.limit` (default=`1000`)
     configuration property to control number of prefetched metadata objects
     in the same directory by `PerformanceCachingGoogleCloudStorage`.

     To disable metadata prefetching set property value to `0`.

     To prefetch all objects metadata in a directory set property value to `-1`.

  5. Add configuration properties to control batching of copy operations
     separately from other operations:

       fs.gs.copy.max.requests.per.batch (default: 30)
       fs.gs.copy.batch.threads (default: 0)

  6. Fix `RejectedExecutionException` during parallel execution of GCS batch
     requests.

  7. Change default values for GCS batch/directory operations properties:

       fs.gs.copy.with.rewrite.enable (default: false -> true)
       fs.gs.copy.max.requests.per.batch (default: 30 -> 1)
       fs.gs.copy.batch.threads (default: 0 -> 50)
       fs.gs.max.requests.per.batch (default: 30 -> 25)
       fs.gs.batch.threads (default: 0 -> 25)


1.9.4 - 2018-08-07

  1. Add `fs.gs.generation.read.consistency (default : LATEST)` property to
     determine read consistency across different generations of a GCS object.

     Three modes are supported:

     `LATEST`: this is the default behavior. The connector will ignore